SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

UI-Tables can now be sorted by multiple columns
  when the ctrl key is pressed while column headers are clicked.

Syntax Plugin:
  New option >>Quotes (' or ") are doubled / enclose selection<<:
  See menu File --> New Session Properties --> tab Syntax

New option to define if NULL values are sorted highest or lowest
  when tables are sorted by clicking column headers.
  See menu File --> New Session Properties --> tab General --> section Output

Data compare / JDiff Plugin:
  The compare dialog now offers options to change the way differences are displayed.

Graph Plugin:
  Made resizing tables easier.

Introduced Java 20 compatibility.

Graph Plugin:
  A Graph's context menu now offers an option to detach a Graph from a Session.
  The Graph will remain available for linking, see the "Link Graph" toolbar button.

Data compare:
  UI-Tables offer a new right mouse menu "Compare selected cells".
  Note that the function compares table cell selections. To compare complete tables use the Ctrl+a shortcut.
  This feature includes improvements and bug fixes for the DBDiff Plugin.

Table cell data popup improvements:
  Now offers a list of previous files to choose from.
  The file chooser opened by the "Browse" button was changed from an open to a save dialog.
  Info: Double click a table cell to open its cell data popup

#611 Reconnect dialog (ctrl+T) allows to skip opening a new connection.
  To open a connection again reopen the reconnect dialog.
  This option may be useful for example when your connection
  disturbs external activities on the database.

Handling of copying SQL result rows to extra windows was unified and now offers
  the "mark duplicate rows" function.
  Ways to copy result rows to extra windows are: