@@ -7,6 +7,7 @@ TabularDiffPresentation.noDiffsMessage=No differences were detected
 JMeldDiffPresentation.table.diff=Database table DDL compare
 
 JMeldDiffPresentation.ignore.white.spaces=Ignore white spaces
+JMeldDiffPresentation.ignore.case=Ignore case
 
 JMeldDiffPresentation.draw.curves=Draw curves
 JMeldDiffPresentation.curve.type=Curve type
